<resources>
    <string name="app_name">Proyek 1 LusiaNisa</string>

    <!-- Bagian Identitas Diri -->
    <string name="nama">eli</string>
    <string name="main">123456</string>
    <string name="fakultas">Pendidikan MIPA dan Teknologi</string>
    <string-array name="prodi">
        <item>Pendidikan Matematika</item>
        <item>Pendidikan Fisika</item>
        <item>Pendidikan Teknologi Informasi</item>
        <item>Pendidikan Biologi</item>
    </string-array>

    <!-- Bagian Aplikasi -->
    <string name="ePesan">Ini adalah desain pertama di Android</string>
    <string name="pesan">Tuliskan pesan anda disini</string>
    <string name="bPertama">Tekan</string>
    <string name="bKedua">Lepas</string>
    <string name="cb1">Pilihan 1</string>
    <string name="cb2">Pilihan 2</string>
    <string name="jk1">Laki-laki</string>
    <string name="jk2">Perempuan</string>

    <!-- String dari Coding Tambahan -->
    <string name="welcome_text">Selamat Datang!</string>
    <string name="edit_hint">Masukkan teks di sini</string>
    <string name="icon_description">Ikon dekoratif</string>

    <!-- Linear Activity 2 -->
    <string name="kepada">Kepada</string>
    <string name="subjek">Subjek</string>
    <string name="isi">Isi</string>
    <string name="kirim">Kirim</string>

    <string name="copyright">Created by Lusiana Nisa \n Universitas PGRI Pontianak</string>
    <string name="username">Masukkan Nama Anda</string>

</resources>
